# agodesk

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-linux-installer.yml  build-windows-installer.yml  (+2 more)
docs/: AURAGO_CHAT_ATTACHMENTS_HANDOFF.md  AURAGO_CHAT_CONTROLS.md  AURAGO_COMPUTER_USE_AGENT.md  AURAGO_FILE_SEARCH_HANDOFF.md  BACKEND_FEATURE_PLANNING.md  BACKEND_INTEGRATION.md  BACKEND_PROTOCOL.md  I18N.md  LIVE2D_INTEGRATION_PLAN.md  SPEECH_SIDECAR_PROTOCOL.md  VOICE_BARGE_IN_INTERRUPTION_PLAN.md
public/: integration-blank.html
scripts/: audit-i18n-gaps.mjs  build-linux-bundles.mjs  build-linux-installer.sh  build-windows-installer.ps1  copy-sidecar.mjs  copy-speech-sidecar.mjs  copy-vad-assets.mjs  download-sherpa-onnx-libs.mjs  download-speech-asr-model.mjs  download-speech-tts-model.mjs  download-speech-whisper-model.mjs  dump-i18n-gaps.mjs  edge-tts-synthesize.mjs  ensure-sherpa-onnx-libs.mjs  generate-update-manifest.mjs  generate-update-manifest.test.mjs  i18n-gap-source.json  i18n-missing-translations.json  i18n-remaining-gaps.json  mock-server.mjs  patch-companion-health-i18n.mjs  patch-i18n-round2.mjs  patch-integrations-i18n.mjs  patch-remaining-i18n.mjs  patch-statusbar-voice-i18n.mjs  patch-ui-refresh-i18n.mjs  patch-update-i18n.mjs  patch-warnings-i18n.mjs  release-signing.mjs  release-signing.test.mjs  restore-i18n.mjs  run-with-speech-env.mjs  stage-sherpa-runtime.mjs  sync-i18n-keys.mjs  test-mock-attachment-flow.mjs  translate-missing-i18n.mjs  translate-speech-i18n.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  installer.nsh  postinst.sh  postrm.sh  tauri.conf.json
src-tauri/capabilities/: default.json  integration-embed.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: agodesk-commands.toml
src-tauri/src/: commands.rs  integration_embed.rs  lib.rs  main.rs  tray.rs  window_effects.rs
src-tauri/src/access_policy/: file_policy.rs  mod.rs  shell_policy.rs  store.rs
src-tauri/src/computer_use/: client.rs  context.rs  input.rs  mod.rs  types.rs
src-tauri/src/computer_use/browser/: cdp.rs  endpoint.rs  launch.rs  mod.rs  session.rs  state.rs
src-tauri/src/computer_use/platform/: mod.rs
src-tauri/src/computer_use/platform/linux/: atspi_impl.rs  mod.rs  ui_tree.rs
src-tauri/src/computer_use/platform/macos/: ax_impl.rs  mod.rs  ui_tree.rs
src-tauri/src/computer_use/platform/windows/: ui_tree.rs
src-tauri/src/desktop/: mod.rs  permission.rs  types.rs
src-tauri/src/desktop/platform/: linux.rs  macos.rs  macos_capture.rs  mod.rs  windows.rs
src-tauri/src/files/: access.rs  mod.rs  ops.rs  types.rs
src-tauri/src/files/search/: format.rs  index.rs  mod.rs  ops.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/openpets/: client.rs  commands.rs  discovery.rs  mod.rs  protocol.rs  state.rs  validate.rs
src-tauri/src/shell/: exec.rs
src-tauri/src/speech/: asr.rs  asr_sherpa.rs  handler.rs  mod.rs  model_download.rs  runtime.rs  sidecar_client.rs  tts.rs  tts_edge.rs  tts_sherpa.rs  types.rs
src-tauri/src/ws/: asset_fetch.rs  mod.rs  origin.rs  store.rs  tls.rs  transport.rs  types.rs
(+220 files in other folders)
